syntax = "proto3";

package order;

option go_package = "internal/proto;proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  int64 order_id = 1;
}